# GLSL-PathTracer-test_ai_coding

./: .gitignore  CMakeLists.txt
src/: Main.cpp
src/core/: Renderer.cpp
src/shaders/: compute_shader.spv
src/vulkan/: multi_gpu_manager.cpp  scene.h  vulkan_context.cpp  vulkan_main.cpp  vulkan_main.h
vulkan_multi_gpu/: CMakeLists.txt  README.md
vulkan_multi_gpu/src/: main.cpp  multi_gpu_manager.cpp  multi_gpu_manager.h  path_tracer.cpp  path_tracer.h  scene.cpp  types.h  vulkan_context.cpp  vulkan_context.h
